Integrate LLM runtime and classifier